[package]
name = "todomvc"
version = "0.1.0"
authors = ["benzhai <ben.zhai@grapecity.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.68"
js-sys = "0.3.45"
lazy_static = "0.1.*"

[dependencies.web-sys]
version = '0.3.5'
features = [
    'console',
    'Storage',
    'Window'
]