[package]
name = "todomvc"
version = "0.1.0"
authors = ["benzhai <ben.zhai@grapecity.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "./src/rust/lib.rs"

[dependencies]
wasm-bindgen = {version = "0.2.68", features = ["serde-serialize"] }
js-sys = "0.3.45"
serde = { version = "1.0", features = ["derive"] }

[dependencies.web-sys]
version = '0.3.5'
features = [
    'console',
    'Storage',
    'Window'
]